fix: update image path

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 
     <div class="articles">
-      <img class="picture" src="/resources/photo_1@2x.png">
+      <img class="picture" src="resources/photo_1@2x.png">
 
       <div class="text-container">
         <div class="main-text">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="articles">
-      <img class="picture" src="/resources/photo_3@2x.png">
+      <img class="picture" src="resources/photo_3@2x.png">
 
       <div class="text-container">
        <div class="main-text">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="articles">
-      <img class="picture" src="/resources/photo_2@2x.png">
+      <img class="picture" src="resources/photo_2@2x.png">
 
       <div class="text-container">
        <div class="main-text">
@@ -71,11 +71,6 @@
       
     </div>
 
-
-
-
-   
-
     <div class="author-info">
       Coded by <a href="#">Nibras.Dev06</a> | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank" > devChallenges.io</a>.
@@ -83,3 +78,4 @@
 
   </body>
 </html>
+
